--- a/docs/api_static/style.css
+++ b/docs/api_static/style.css
@@ -3,9 +3,6 @@
   margin-left: 3em;
   margin-right: 3em
 }
-.typetable {
-  border-style: hidden
-}
 .paramstable {
   border-style: hidden;
   padding: 5pt 5pt
@@ -25,11 +22,16 @@ div.sig_block {
 }
 body {
   font: 13px sans-serif;
-  color: black;
+  color: #222;
   text-align: left;
   padding: 5px;
   margin: 0
 }
+
+table {
+  font: 13px sans-serif;
+}
+
 h1 {
   text-align: left;
   font-weight: normal;
@@ -99,51 +101,15 @@ a {
   color: #416DFF;
   text-decoration: none
 }
-a:hover {
-  background-color: #ddd;
-  text-decoration: underline
-}
-pre.verbatim,
-pre.codepre {} .indextable {
-  border: 1px #ddd solid;
-  border-collapse: collapse
-}
-.indextable td,
-.indextable th {
-  border: 1px #ddd solid;
-  min-width: 80px
-}
-.indextable td.module {
-  background-color: #eee;
-  padding-left: 2px;
-  padding-right: 2px
-}
-.indextable td.module a {
-  color: 4E6272;
-  text-decoration: none;
-  display: block;
-  width: 100%
-}
-.indextable td.module a:hover {
-  text-decoration: underline;
-  background-color: transparent
+a:hover,
+a:hover > code {
+  background: #eee;
+  outline: 1px solid #eee;
+  color: #416DFF;
 }
 .deprecated {
   color: #888;
   font-style: italic
-}
-.indextable tr td div.info {
-  margin-left: 2px;
-  margin-right: 2px
-}
-ul.indexlist {
-  margin-left: 0;
-  padding-left: 0;
-}
-ul.indexlist li {
-  list-style-type: none;
-  margin-left: 0;
-  padding-left: 0;
 }
 
 /* syntax highlighting */
@@ -158,7 +124,8 @@ pre a {
   color: inherit;
 }
 
-pre a:before {
+pre a:before,
+a > code:before {
   content: "";
   background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' version='1.2' viewBox='0 0 600 600' fill='#416DFF'%3E%3Cpath d='M231.2 415.3c-12.7 12.7-33.3 12.7-46 0-12.6-12.7-12.6-33.3 0-46l184.6-184.6c12.7-12.6 33.3-12.6 46 0 12.7 12.7 12.7 33.3 0 46L231.2 415.3z'/%3E%3Cpath d='M329.3 194L449 74.4c6.5-6.4 16.8-6.4 23.2 0l54 54c6.4 6.4 6.4 16.7 0 23l-119.8 120c-4 3.8-9.3 5.3-14.4 4.4L346.5 321c32 25.3 79 23 108.4-6.4l118-118.3c31-31.8 32-84 0-115.7l-53-53.4c-32-31.8-84-31.7-116 0L286 145.7C256.3 175 254 222 279.3 254l45.4-45.5c-1-5 .6-10.5 4.5-14.4zm-60.5 214.7L149 528.7c-6.3 6.2-16.6 6.2-23 0l-54-54.2c-6.4-6.4-6.4-16.7 0-23l119.8-119.8c4-4 9.3-5.4 14.3-4.5l49-48.2c-32-25.6-79-23-108 6L28 403.8c-31.8 31.8-32 84 0 115.7L81 573c32 31.7 84 31.6 115.8 0L315 454.2c29.7-29.3 32-76.3 6.7-108.3l-48.3 48c1 5-.5 10-4.5 14z'/%3E%3C/svg%3E");
   width: 1ex;
@@ -170,6 +137,7 @@ pre a:before {
 .code {
   /*color: #c5c8c6;*/
   color: #4d4d4c;
+  background: #f5f5f5;
 }
 
 .keyword { color: #8959a8 }
@@ -180,11 +148,18 @@ pre a:before {
 .constructor { color: #f5871f }
 .type { color: #f5871f }
 .string { color: #718c00 }
-.warning { color: Red; font-weight: bold }
+
+.warning {
+  margin-bottom: .5em;
+}
+.warning > .label {
+  color: #cc6666;
+  font-weight: bold;
+  padding-right: 1ex;
+}
 
 body {
   padding: 0;
-  background: #2d3134;
   background: #272b2d;
 }
 
@@ -214,7 +189,8 @@ body > hr {
   margin: 3em auto 5em;
 }
 
-body > pre {
+body > pre,
+body > .type-declaration {
   margin-top: 2em;
   padding-bottom: 1em;
   border-bottom: 1px solid #eee;
@@ -226,10 +202,18 @@ body > pre {
 
 .info {
   display: flex;
+  margin-bottom: 4em;
+}
+
+.info table {
+  border-spacing: 1.5em 1em;
+}
+.info td:first-child {
+  font-weight: bold;
 }
 
 .type.hljs,
-.code.hljs {
+code.hljs {
   display: inline;
   color: inherit;
   background: none;
@@ -254,7 +238,6 @@ body > pre {
 .examples .hljs {
   display: block;
   overflow-x: auto;
-  background: #272b2d;
   background: #1d1f21;
   color: #c5c8c6;
   padding: 0.5em;
@@ -264,9 +247,79 @@ body > pre {
   box-sizing: border-box;
 }
 
-table {
-  border-spacing: 1.5em 1em;
+table.typetable {
+  border-spacing: .5em;
 }
-td:first-child {
-  font-weight: bold;
+
+.tag {
+  margin-top: 1em;
+}
+
+ul.indexlist {
+  margin: 0;
+  padding-left: 16px;
+}
+ul.indexlist li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+body > table {
+  width: 40%;
+  min-width: 600px;
+  border-spacing: 1.5em 2em;
+}
+
+body > table td {
+  border-bottom: 1px solid #eee;
+  font-weight: normal;
+  vertical-align: top;
+}
+body > table td:first-child {
+  font-weight: normal;
+}
+
+body > table .info {
+  margin: 0;
+  display: block;
+}
+
+@media (max-width: 1000px) {
+  body:before {
+    width: 100%;
+    min-width: unset;
+  }
+
+  body > pre,
+  body > .type-declaration {
+    width: 100%;
+    min-width: unset;
+  }
+
+  .info {
+    flex-direction: column;
+  }
+
+  .not-examples {
+    width: 100%;
+    min-width: unset;
+  }
+
+  .examples {
+    width: 100%;
+  }
+
+  body > table {
+    width: 100%;
+    min-width: unset;
+  }
+
+  .examples > pre {
+    margin: 1em 2em;
+  }
+
+  .examples .hljs {
+    background: #2d3134;
+  }
 }
